src/main/metadata/objects/PDC_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Amt__c</fullName>
        <label>Adjusted Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Amt__c</fullName>
        <label>Cheque Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_Date__c</fullName>
        <label>Cheque Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No.</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_PDC_Identifier__c</fullName>
        <description>This field will store combination of BPID,Contract ID and PDC ID.</description>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ PDC_ID__c+"-"+ PDC_SEQ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite PDC Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>PDC Details</relationshipLabel>
        <relationshipName>PDC_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDC_ID__c</fullName>
        <description>It will store PDC Id coming from RMW.</description>
        <label>PDC ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDC_SEQ__c</fullName>
        <label>PDC SEQ</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Amt__c</fullName>
        <label>Rental Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <label>Rental</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PDC Detail</label>
    <nameField>
        <displayFormat>PDC-{000000}</displayFormat>
        <label>PDC Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDC Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>